--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
 
  /* REGOLE GENERALI */
 
@@ -9,8 +9,8 @@
 }
 
 body {
-  font-family: ;
-  font-size: ;
+  font-family: 'Heebo', sans-serif;
+  font-size: 15px;
 }
 
 /* REGOLE RICORRENTI DI PAGINA */
@@ -23,29 +23,33 @@ body {
 }
 
 .cta {
-
+  background-color: #ff7a59;
+  border: 1px solid white;
+  border-radius: 2px;
 }
 
+
+button {
+  padding: 5px;
+  color: white;
+}
 
 /* REGOLE HEADER */
 
 header {
   /* DEBUG:  */
   height: 550px;
-  background-color: #00e6e6;
 }
 
 header .menu{
-  /* DEBUG */
   height: 150px;
-  background-color: #e6ffff;
 }
-
+.nav-cell:last-child{
+  float: right;
+}
 nav {
-  /* DEBUG:  */
   height: 48%;
   width: auto;
-  background-color: #99ffff;
 }
 
 header .hor-rul {
@@ -66,6 +70,37 @@ header .separèe {
   background-color: #e6e6ff;
 }
 
+header nav:first-child{
+  background-color: #f2f2f2;
+}
+
+header nav .nav-cell {
+  float: left;
+  max-width: 40%;
+  margin: 20px 5%;
+}
+
+header nav div a {
+  text-decoration: none;
+  color: grey;
+  font-weight: bold;
+  padding: 0 20px 0 20px;
+}
+
+header nav:first-child div a:first-child{
+  border-right: 1px solid grey;
+}
+
+button.login {
+  color: #ff7a59;
+  border: 1px solid #ff7a59;
+  border-radius: 5px;
+}
+
+header ul li {
+  list-style-type: none;
+  float: left;
+}
 /* REGOLE MAIN */
 
 main .eyecatch {
@@ -75,6 +110,7 @@ main .eyecatch {
   margin: auto;
   background-color: #99ffcc;
 }
+
 
 /* REGOLE SECTION */
 
