--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,7 @@ button {
 /* REGOLE HEADER */
 
 header {
-  /* DEBUG:  */
-  height: 550px;
+height: 891px;
 }
 
 header .menu{
@@ -58,16 +57,18 @@ header .hor-rul {
 
 header .jumbotron {
   padding: 20px;
-  /* DEBUG:  */
+  background-image: url(../img/jumbotron.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
   height: calc(90% - 150px);
-  background-color: #00ffff;
+
 }
 
 header .separèe {
   /* DEBUG:  */
   height: 10%;
   width: auto;
-  background-color: #e6e6ff;
+  background-color: #00b38f;
 }
 
 header nav:first-child{
