--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
  /* REGOLE GENERALI */
 
 * {
@@ -9,7 +10,7 @@
 }
 
 body {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   color: #33475b;
 }
@@ -30,7 +31,7 @@ body {
 }
 
 .button {
-  padding: 8px;
+  padding: 10px 20px;
   color: white;
   border-radius: 6px;
 }
@@ -38,7 +39,8 @@ body {
 .grey {
   background-color: #f2f2f2;
   color: #00adb5;
-  border: 1px solid grey
+  border: 1px solid grey;
+  font-size: 10px;
 }
 
 .login {
@@ -209,7 +211,7 @@ section .row {
 }
 
 section .row .cell-first-row-left {
-  margin: 1% 5%;
+  margin: 5% 5%;
   float: left;
   height: 100%;
   width: 20%;
@@ -258,11 +260,11 @@ section .row .cell-second-row {
 }
 
 section .row .cell-second-row div , section .row .cell-second-row h3 , section .row .cell-second-row p , section .row .cell-second-row h4 {
-  padding: 5% 0;
+  padding: 10%;
 }
 
 section .row .cell-second-row div {
-  width: 20%;
+  width: 90%;
   margin: auto;
 }
 
@@ -280,6 +282,11 @@ section .row .cell-second-row:first-of-type {
 
 section .row .cell-second-row:last-of-type {
   margin-left: 7%;
+}
+
+section .row .cell-second-row a {
+  display: inline-block;
+  margin: 30px
 }
 /* REGOLE SECONDA SECTION */
 
@@ -337,7 +344,7 @@ section .row .cell-second-row:last-of-type {
   float: left;
   margin: 1% 2% 2% 15%;
   padding: 10px;
-  width: 10%;
+  width: 15%;
 }
 
 .row .cell-fourth-row-left h2 , .row .cell-fifth-row div h2  {
@@ -405,6 +412,7 @@ footer .row ul li:first-child{
 
 footer .row ul li , footer .row ul li i{
   color: white;
+  padding: 10px;
 }
 
 footer .row {
@@ -432,7 +440,7 @@ footer .lang-menu{
 
 footer .lang-menu ul li {
   float: left;
-  padding: 20px;
+  padding: 15px;
 }
 
 #logo-footer {
